# MNN

./: CMakeLists.txt
express/: Executor.cpp  Expr.cpp  NeuralNetWorkOp.cpp
project/conv-opt/: settings.gradle
project/conv-opt/app/: build.gradle
project/conv-opt/app/src/androidTest/java/com/example/mnnconvolutionoptimisation/: ExampleInstrumentedTest.kt
project/conv-opt/app/src/main/: AndroidManifest.xml
project/conv-opt/app/src/main/cpp/: CMakeLists.txt  benchmark.cpp  convolutionTest.cpp  deviceInformation.cpp  deviceInformation.h  functionalityTests.cpp  kernelDefines.h  kernelProfiling.cpp  mnn_jni.cpp  native-lib.cpp  profiling.cpp
project/conv-opt/app/src/main/java/: com - Shortcut.lnk
project/conv-opt/app/src/main/java/com/example/mnnconvolutionoptimisation/: MainActivity.kt
project/conv-opt/app/src/main/res/values/: strings.xml  themes.xml
project/conv-opt/app/src/main/res/values-night/: themes.xml
project/conv-opt/app/src/test/java/com/example/mnnconvolutionoptimisation/: ExampleUnitTest.kt
project/conv-opt/gradle/wrapper/: gradle-wrapper.properties
source/backend/cpu/: CPUConvolution.cpp
source/backend/opencl/: CMakeLists.txt
source/backend/opencl/core/runtime/: OpenCLRuntime.cpp  OpenCLRuntime.hpp
source/backend/opencl/execution/buffer/: ConvBufExecution.cpp  ConvBufExecution.hpp
source/backend/opencl/execution/cl/: anishGEMM.cl  benchmark.cl  opencl_codegen.py  opencl_program.cc  opencl_program2.cc  opt_gemm.cl
source/core/: Tensor.cpp
source/geometry/: GeometryConvUtils.cpp
test/op/: ConvolutionTest.cpp
tools/train/source/nn/: NN.cpp
